--- a/app/src/main/res/layout/activity_list_reviews_avtivity.xml
+++ b/app/src/main/res/layout/activity_list_reviews_avtivity.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Reseñas:"
+        android:text="@string/txt_reviews_ttl"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
