--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -42,7 +42,7 @@
         android:layout_marginTop="12dp"
         android:background="@color/backText"
         android:ems="10"
-        android:hint="Imagen"
+        android:hint="@string/txt_img_reg"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -135,7 +135,7 @@
         android:layout_marginTop="12dp"
         android:background="@color/backText"
         android:ems="10"
-        android:hint="Apellidos"
+        android:hint="@string/txt_ape_reg"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:textColor="@color/black"
