--- a/app/src/main/res/layout/item_hotel.xml
+++ b/app/src/main/res/layout/item_hotel.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/txt_hotel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hotel:"
+                    android:text="@string/txt_det_hotel"
                     android:layout_marginLeft="15dp"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
@@ -68,7 +68,7 @@
                     android:id="@+id/txt_localidad"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Localidad:"
+                    android:text="@string/txt_det_city"
                     android:layout_marginLeft="15dp"
                     android:gravity="left"
                     android:textColor="@color/black"
