--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
-        android:text="Add Hotel"
+        android:text="@string/ttl_add_hotel"
         android:textColor="#A57C00"
         android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
