--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:text="User:"
+            android:text="@string/ttl_review_user"
             android:layout_weight="3"
             android:textStyle="bold" />
 
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:text="Date:"
+            android:text="@string/ttl_review_date"
             android:layout_weight="3"
             android:textStyle="bold" />
 
@@ -60,7 +60,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Review:"
+        android:text="@string/ttl_review_rev"
         android:layout_marginTop="8dp"
         android:textSize="16sp"/>
 
