--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:background="#DAA6A6"
+    android:background="#CAAFAF"
     android:padding="16dp">
 
     <LinearLayout
