--- a/app/src/main/res/layout/bottomsheet_fragment.xml
+++ b/app/src/main/res/layout/bottomsheet_fragment.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/fondo">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/barra"
@@ -31,34 +30,6 @@
         app:layout_constraintTop_toBottomOf="@+id/barra" />
 
     <Button
-        android:id="@+id/btn_saves"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_fav"
-        android:gravity="left|center_vertical"
-        android:text="@string/btn_saves"
-        android:background="#00D8BDBD"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_config" />
-
-    <Button
-        android:id="@+id/btn_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_list"
-        android:gravity="left|center_vertical"
-        android:text="@string/btn_list"
-        android:background="#00D8BDBD"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_saves" />
-
-    <Button
         android:id="@+id/btn_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_list" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_config" />
 
 
 
